# tdx_combine

./: .gitignore  .tasks  main.py  pyproject.toml  read_block.py  result.json
.github/workflows/: build.yml  main.yml  windows-build.yml
action/: __init__.py  combine.py  export.py  update.py
config/: config.yaml
database/: __init__.py  models.py  populate_database.py  setup.py
reader/: __init__.py  blocks.py  inforharbor_block.py  mappings.py  stocks.py
src/core/: __init__.py  combine.py  export.py  insertblock.py  mode.py  update.py
src/core/database/: __init__.py  helpers.py  models.py  populate_database.py
src/core/readers/: __init__.py  addition.py  blocks.py  helpers.py  modes.py  stocks.py
src/ui/: __init__.py  app.py
src/ui/components/: button.py  data_information.py  datatable.py  display.py  dropdown.py
src/ui/views/: __init__.py  calc.py  custom.py  data.py  mode.py  tdx.py
src/utils/: __init__.py  constants.py  types.py
utils/: __init__.py  typing.py
