[project]
name = "tdx-combine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.4",
    "flet[all]>=0.80.0",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]


[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]


[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
